--- a/.github/workflows/ssr-scraper.yml
+++ b/.github/workflows/ssr-scraper.yml
@@ -1,8 +1,8 @@
 name: SSR Scraper
 on:
-  push:
   schedule:
-    - cron: '*/9 * * * *'
+    - cron: '0 */6 * * *'
+  workflow_dispatch:
 
 jobs:
   ssr-scraper:
